Reorganize and clarify todo list structure
Moved the 'Système de votes' item to a 'PAS SÛR' section to indicate uncertainty and added a note about smoothing results. Removed redundant or unclear items for better clarity.

--- a/todo
+++ b/todo
@@ -1,6 +1,4 @@
 # commandes 
-project - explique le projet
-info - donne les données de la capsule
 
 !etat ou !status : affiche température, humidité, lumière
 !arrosage : déclenche l'arrosage (avec cooldown)
@@ -12,5 +10,11 @@ Stockage des données : Fichier JSON ou SQLite
 Sécurité : Cooldowns, permissions, limites
 
 Logs : Enregistrer toutes les actions
-Système de votes : Les viewers votent pour arroser
 Alertes : Notifications si problème
+
+
+
+
+### PAS SÛR
+Système de votes : Les viewers votent pour arroser
+# problème : lisse le résultat
